fix(feedback-service): align evaluation logic and add missing maxScore fields
Fixes two critical bugs in submission evaluation:

1. Missing maxScore fields in AI-generated evaluation JSON
   - Added maxScore fields to prompt template's required JSON structure
   - correctness.maxScore = 50, efficiency.maxScore = 30, style.maxScore = 20
   - overall.maxScore = 100
   - Also included in correctness gate fallback values

2. Misaligned isCorrect logic causing false negatives
   - Changed CodingTaskEvaluator to calculate score as percentage of passed tests
   - Changed isCorrect from 'all tests passed' to 'score >= 70%' threshold
   - Now aligns with SubmissionEvaluatedEvent documentation and AI prompt logic
   - Prevents submissions with 70%+ score from being marked as incorrect

Result: Submissions with passing evaluations will now correctly show isCorrect=true
and proper scoreEarned values.